# web_assembly_project

./: .env  .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: database.rs  main.rs
frontend/: Cargo.toml
frontend/languages/: en-US.ftl  tr-TR.ftl
frontend/src/: app.rs  elements.rs  header.rs  i18n.rs  main.rs  router.rs
frontend/src/app/: school.rs  signing.rs  view.rs
frontend/src/app/school/: add_school.rs  classes.rs  homepage.rs  lectures.rs  teachers.rs  timetables.rs
frontend/src/elements/: text_inputs.rs
shared/: Cargo.toml
shared/src/: lib.rs
