[package]
name = "backend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
dotenvy = "0.15.7"
moon.workspace = true
sqlx = {version ="0.8.3", features = ["postgres", "runtime-tokio-rustls"]}
serde = {version ="*", features = ["derive"]}

shared = {path = "../shared"}