[package]
name = "frontend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
zoon.workspace = true
fluent = {version = "0.16.0", features =["fluent-pseudo"]}
unic-langid = {version = "0.9.1", features = ["unic-langid-macros"]}
serde = {version ="*", features = ["derive"]}


#ders4 31.28